# ComputerGraphics

./: .gitignore  README.md  lab1.m  lab1.mlx
OpenGL/: CMakeLists.txt  lab2.cpp
OpenGL_2/: CMakeLists.txt  main.cpp
labs/: lab2.py  lab3.py  lab4.py  lab4_1.py  lab4_2.py  lab4_3.py  lab5_1.py  lab5_2.py  lab5_3.py  lab6_1.py  lab6_2.py
labs/lab7/DataStructs/: DataStructs.vcxproj
labs/lab7/Graphics/: Material.cpp  PixelArray.cpp  TextureRgbImage.h  ViewableBase.h  ViewableEllipsoid.h  ViewableParallelepiped.cpp  ViewableTriangle.cpp
labs/lab7/OpenglRender/: GlutRenderer.cpp  GlutRenderer.h  OpenglRender.vcxproj
labs/lab7/RayTrace/: RayTrace.cpp  RayTraceData.cpp  RayTraceData.h
labs/lab7/RayTraceKd/: RayTraceKd.cpp  RayTraceSetup2.cpp  RayTraceStats.h  UpgradeLog.htm
labs/lab7/RaytraceMgr/: LoadNffFile.cpp  RayTraceMgr.vcxproj  SceneDescription.cpp
labs/lab7/VrMath/: LinearR4.cpp  PolygonClip.cpp  Quaternion.cpp
labs/tex/: loadbmp.cpp  loadbmp.h  sample.cpp
untitled/: script.py
РГР/: rgr.ipynb
лабораторные/: lab5_1.py  lab5_3.py  lab6_1.py
лабораторные/lab7/DataStructs/: Array.h  KdTree.cpp  KdTree.h  ShellSort.h  Stack.h
лабораторные/lab7/Graphics/: CameraView.cpp  CameraView.h  Graphics.vcxproj  Material.h  MaterialBase.h  MaterialCookTorrance.cpp  PixelArray.h  RgbImage.cpp  RgbImage.h  TextureMapBase.cpp  TextureMapBase.h  TextureRgbImage.cpp  TransformViewable.cpp  ViewableBezierSet.cpp  ViewableBezierSet.h  ViewableCone.cpp  ViewableCylinder.cpp  ViewableParallelepiped.h  ViewableParallelogram.cpp  ViewableSphere.cpp
(+10 files in other folders)
